[project]
name = "unicodeplots"
version = "0.2.0"
description = "UnicodePlots.jl but in python "
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
img = [
    "pillow>=11.1.0",
]


[dependency-groups]
lint = [
    "mypy>=1.15.0",
    "ruff>=0.11.0",
]

dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-snapshot>=0.9.0",
    "ruff>=0.11.0",
    "uv>=0.9.5",
]

test = [
    "pytest>=8.3.5",
    "pytest-snapshot>=0.9.0",
    "pillow>=11.1.0",
    "tinygrad",
    "numpy",
    "torch",
]


[tool.setuptools]
packages = [
    "unicodeplots",
    "unicodeplots.canvas",
    "unicodeplots.plots",
    "unicodeplots.components",
    "unicodeplots.utils",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[tool.ruff]
line-length = 160
indent-width = 4
preview = true
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "I001",  # isort
  "W6",
  "E71",
  "E72",
  "E112",   # no-indented-block
  "E113",   # unexpected-indentation
  "E203",   # whitespace-before-punctuation
  "E272",   # multiple-spaces-before-keyword
  "E275",   # missing-whitespace-after-keyword
  "E303",   # too-many-blank-lines
  "E304",   # blank-line-after-decorator
  "E501",   # line-too-long
  "E702",   # multiple-statements-on-one-line-semicolon
  "E703",   # useless-semicolon
  "E731",   # lambda-assignment
  "W191",   # tab-indentation
  "W291",   # trailing-whitespace
  "W293",   # blank-line-with-whitespace
  "UP039",  # unnecessary-class-parentheses
  "C416",   # unnecessary-comprehension
  "RET506", # superfluous-else-raise
  "RET507", # superfluous-else-continue
  "A",      # builtin-variable-shadowing, builtin-argument-shadowing, builtin-attribute-shadowing
  "SIM105", # suppressible-exception
  "FURB110",# if-exp-instead-of-or-operator
  "RUF018", # assignment-in-assert
]

[tool.mypy]
ignore_missing_imports = true
